[gd_scene load_steps=199 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Characters/trump.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0000.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0001.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0002.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0003.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0004.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0005.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0006.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0007.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0008.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0009.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0010.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0011.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0012.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0013.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0014.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0015.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0016.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0017.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0018.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0019.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0020.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0021.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0022.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0023.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0024.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0025.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0026.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0027.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0028.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0029.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0030.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0031.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0032.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0033.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0034.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0035.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0036.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0037.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0038.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0039.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0040.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0041.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0042.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0043.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0044.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0045.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0046.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0047.png" type="Texture" id=50]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0048.png" type="Texture" id=51]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0049.png" type="Texture" id=52]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0050.png" type="Texture" id=53]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0051.png" type="Texture" id=54]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0052.png" type="Texture" id=55]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0053.png" type="Texture" id=56]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0054.png" type="Texture" id=57]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0055.png" type="Texture" id=58]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0056.png" type="Texture" id=59]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0057.png" type="Texture" id=60]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0058.png" type="Texture" id=61]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0059.png" type="Texture" id=62]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0060.png" type="Texture" id=63]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0061.png" type="Texture" id=64]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0062.png" type="Texture" id=65]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0063.png" type="Texture" id=66]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0064.png" type="Texture" id=67]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0065.png" type="Texture" id=68]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0066.png" type="Texture" id=69]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0067.png" type="Texture" id=70]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0068.png" type="Texture" id=71]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0069.png" type="Texture" id=72]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0070.png" type="Texture" id=73]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0071.png" type="Texture" id=74]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0072.png" type="Texture" id=75]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0073.png" type="Texture" id=76]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0074.png" type="Texture" id=77]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0075.png" type="Texture" id=78]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0076.png" type="Texture" id=79]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0077.png" type="Texture" id=80]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0078.png" type="Texture" id=81]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0079.png" type="Texture" id=82]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0080.png" type="Texture" id=83]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0081.png" type="Texture" id=84]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0082.png" type="Texture" id=85]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0083.png" type="Texture" id=86]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0084.png" type="Texture" id=87]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0085.png" type="Texture" id=88]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0086.png" type="Texture" id=89]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0087.png" type="Texture" id=90]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0088.png" type="Texture" id=91]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0089.png" type="Texture" id=92]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0090.png" type="Texture" id=93]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0091.png" type="Texture" id=94]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0092.png" type="Texture" id=95]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0093.png" type="Texture" id=96]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0094.png" type="Texture" id=97]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0095.png" type="Texture" id=98]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0096.png" type="Texture" id=99]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0097.png" type="Texture" id=100]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0098.png" type="Texture" id=101]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0099.png" type="Texture" id=102]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0100.png" type="Texture" id=103]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0101.png" type="Texture" id=104]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0102.png" type="Texture" id=105]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0103.png" type="Texture" id=106]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0104.png" type="Texture" id=107]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0105.png" type="Texture" id=108]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0106.png" type="Texture" id=109]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0107.png" type="Texture" id=110]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0108.png" type="Texture" id=111]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0109.png" type="Texture" id=112]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0110.png" type="Texture" id=113]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0111.png" type="Texture" id=114]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0112.png" type="Texture" id=115]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0113.png" type="Texture" id=116]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0114.png" type="Texture" id=117]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0115.png" type="Texture" id=118]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0116.png" type="Texture" id=119]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0117.png" type="Texture" id=120]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0118.png" type="Texture" id=121]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0119.png" type="Texture" id=122]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0120.png" type="Texture" id=123]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0121.png" type="Texture" id=124]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0122.png" type="Texture" id=125]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0123.png" type="Texture" id=126]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0124.png" type="Texture" id=127]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0125.png" type="Texture" id=128]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0126.png" type="Texture" id=129]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0127.png" type="Texture" id=130]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0128.png" type="Texture" id=131]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0129.png" type="Texture" id=132]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0130.png" type="Texture" id=133]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0131.png" type="Texture" id=134]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0132.png" type="Texture" id=135]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0133.png" type="Texture" id=136]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0134.png" type="Texture" id=137]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0135.png" type="Texture" id=138]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0136.png" type="Texture" id=139]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0137.png" type="Texture" id=140]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0138.png" type="Texture" id=141]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0139.png" type="Texture" id=142]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0140.png" type="Texture" id=143]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0141.png" type="Texture" id=144]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0142.png" type="Texture" id=145]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0143.png" type="Texture" id=146]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0144.png" type="Texture" id=147]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0145.png" type="Texture" id=148]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0146.png" type="Texture" id=149]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0147.png" type="Texture" id=150]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0148.png" type="Texture" id=151]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0149.png" type="Texture" id=152]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0150.png" type="Texture" id=153]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0151.png" type="Texture" id=154]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0152.png" type="Texture" id=155]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0153.png" type="Texture" id=156]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0154.png" type="Texture" id=157]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0155.png" type="Texture" id=158]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0156.png" type="Texture" id=159]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0157.png" type="Texture" id=160]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0158.png" type="Texture" id=161]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0159.png" type="Texture" id=162]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0160.png" type="Texture" id=163]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0161.png" type="Texture" id=164]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0162.png" type="Texture" id=165]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0163.png" type="Texture" id=166]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0164.png" type="Texture" id=167]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0165.png" type="Texture" id=168]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0166.png" type="Texture" id=169]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0167.png" type="Texture" id=170]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0168.png" type="Texture" id=171]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0169.png" type="Texture" id=172]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0170.png" type="Texture" id=173]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0171.png" type="Texture" id=174]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0172.png" type="Texture" id=175]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0173.png" type="Texture" id=176]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0174.png" type="Texture" id=177]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0175.png" type="Texture" id=178]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0176.png" type="Texture" id=179]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0177.png" type="Texture" id=180]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0178.png" type="Texture" id=181]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0179.png" type="Texture" id=182]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0180.png" type="Texture" id=183]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0181.png" type="Texture" id=184]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0182.png" type="Texture" id=185]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0183.png" type="Texture" id=186]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0184.png" type="Texture" id=187]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0185.png" type="Texture" id=188]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0186.png" type="Texture" id=189]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0187.png" type="Texture" id=190]
[ext_resource path="res://Sprites/Effects/Explosion/explosion0188.png" type="Texture" id=191]
[ext_resource path="res://Sounds/celebrate.wav" type="AudioStream" id=192]
[ext_resource path="res://Sounds/wilhelm.wav" type="AudioStream" id=193]
[ext_resource path="res://Explosion.tscn" type="PackedScene" id=194]
[ext_resource path="res://Sounds/explosion.wav" type="AudioStream" id=195]
[ext_resource path="res://Sprites/Props/wall.png" type="Texture" id=196]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 106 ), ExtResource( 107 ), ExtResource( 108 ), ExtResource( 109 ), ExtResource( 110 ), ExtResource( 111 ), ExtResource( 112 ), ExtResource( 113 ), ExtResource( 114 ), ExtResource( 115 ), ExtResource( 116 ), ExtResource( 117 ), ExtResource( 118 ), ExtResource( 119 ), ExtResource( 120 ), ExtResource( 121 ), ExtResource( 122 ), ExtResource( 123 ), ExtResource( 124 ), ExtResource( 125 ), ExtResource( 126 ), ExtResource( 127 ), ExtResource( 128 ), ExtResource( 129 ), ExtResource( 130 ), ExtResource( 131 ), ExtResource( 132 ), ExtResource( 133 ), ExtResource( 134 ), ExtResource( 135 ), ExtResource( 136 ), ExtResource( 137 ), ExtResource( 138 ), ExtResource( 139 ), ExtResource( 140 ), ExtResource( 141 ), ExtResource( 142 ), ExtResource( 143 ), ExtResource( 144 ), ExtResource( 145 ), ExtResource( 146 ), ExtResource( 147 ), ExtResource( 148 ), ExtResource( 149 ), ExtResource( 150 ), ExtResource( 151 ), ExtResource( 152 ), ExtResource( 153 ), ExtResource( 154 ), ExtResource( 155 ), ExtResource( 156 ), ExtResource( 157 ), ExtResource( 158 ), ExtResource( 159 ), ExtResource( 160 ), ExtResource( 161 ), ExtResource( 162 ), ExtResource( 163 ), ExtResource( 164 ), ExtResource( 165 ), ExtResource( 166 ), ExtResource( 167 ), ExtResource( 168 ), ExtResource( 169 ), ExtResource( 170 ), ExtResource( 171 ), ExtResource( 172 ), ExtResource( 173 ), ExtResource( 174 ), ExtResource( 175 ), ExtResource( 176 ), ExtResource( 177 ), ExtResource( 178 ), ExtResource( 179 ), ExtResource( 180 ), ExtResource( 181 ), ExtResource( 182 ), ExtResource( 183 ), ExtResource( 184 ), ExtResource( 185 ), ExtResource( 186 ), ExtResource( 187 ), ExtResource( 188 ), ExtResource( 189 ), ExtResource( 190 ), ExtResource( 191 ) ],
"loop": true,
"name": "end",
"speed": 5.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 14.2501

[node name="Player" type="Area2D"]

position = Vector2( 164.92, 154.362 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "Z Index" ]
xVelocity = 400
yVelocity = 90
gravityVelocity = 3
dragVelocity = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "right"
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0.0797119, -0.640218 )
scale = Vector2( 11.23, 11.2664 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="StartSound" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 192 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="EndSound" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 193 )
volume_db = -15.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Explosion" parent="." index="4" instance=ExtResource( 194 )]

[node name="ExplosionSound" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 195 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Upgrade1" type="Sprite" parent="." index="6"]

visible = false
position = Vector2( -0.111176, -0.400497 )
scale = Vector2( 0.647468, 0.925289 )
texture = ExtResource( 196 )
_sections_unfolded = [ "Visibility" ]

[node name="InvincibleTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 1.5
one_shot = false
autostart = false

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]

[connection signal="timeout" from="InvincibleTimer" to="." method="_on_InvincibleTimer_timeout"]


